AM-1139: factor selection rules